[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/player_character_full_sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/AST.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/jump_2.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/dead_1.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/walk_2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/player_hurt.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/dash_3.wav" type="AudioStream" id=9]
[ext_resource path="res://Scripts/CameraShake.gd" type="Script" id=10]
[ext_resource path="res://Sound/finalspacefull.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/finalspacereduction.wav" type="AudioStream" id=12]
[ext_resource path="res://Scenes/StatsDisplay.tscn" type="PackedScene" id=13]
[ext_resource path="res://Art/Lights/CircleLight.png" type="Texture" id=14]
[ext_resource path="res://Scenes/ScrapDisplay.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("DeadAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 27, 28 ]
}

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("DeadAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="CapsuleShape2D" id=7]

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 2, 2, -4, 2, -4, 12, 2, 12 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.125, 1.625 )
scale = Vector2( 0.5, 0.67 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 1.44758, -7.42192 )
texture = ExtResource( 2 )
vframes = 6
hframes = 9
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/dead = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="ShakeCamera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 10 )
mouse_tracking = 0.25
decay = 5.0

[node name="HealthBar" parent="ShakeCamera2D" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -226.849
margin_top = -120.915
margin_right = -226.849
margin_bottom = -120.915
rect_scale = Vector2( 1.4, 1.4 )

[node name="StatsDisplayZ" type="Node2D" parent="ShakeCamera2D"]
z_index = 2
z_as_relative = false

[node name="StatsDisplay" parent="ShakeCamera2D/StatsDisplayZ" instance=ExtResource( 13 )]
visible = false
margin_left = -240.0
margin_top = -125.0
margin_right = -240.0
margin_bottom = -125.0

[node name="ScrapDisplay" parent="ShakeCamera2D" instance=ExtResource( 15 )]
margin_left = -227.896
margin_top = -107.48
margin_right = -227.896
margin_bottom = -107.48
rect_scale = Vector2( 0.5, 0.5 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AST" parent="." groups=[
"Player",
] instance=ExtResource( 3 )]

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2( 0.443, 0.33 )
shape = SubResource( 7 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DeadAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
pitch_scale = 2.0
mix_target = 2

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.0

[node name="DashAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 14 )
texture_scale = 0.5
energy = 1.1
mode = 2

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
position = Vector2( 1.44758, -7.42192 )
occluder = SubResource( 8 )
[connection signal="health_updated" from="." to="ShakeCamera2D/HealthBar" method="_on_Player_health_updated"]
[connection signal="max_health_updated" from="." to="ShakeCamera2D/HealthBar" method="_on_Player_max_health_updated"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="shot_ast" from="AST" to="." method="_on_AST_shot_ast"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="ShakeCamera2D/HealthBar"]

[editable path="AST"]
